// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Resources Resolver Correctly Resolves Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [],
      "result": Array [
        Object {
          "data": Object {
            "createResources": Object {
              "errors": Array [],
              "result": Array [
                Object {
                  "apiVersion": "policy.open-cluster-management.io/v1",
                  "kind": "Policy",
                  "metadata": Object {
                    "creationTimestamp": "2019-07-24T16:13:38Z",
                    "generation": 1,
                    "name": "test-policy",
                    "namespace": "mcm",
                    "resourceVersion": "1688805",
                    "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/mcm/policies/test-policy",
                    "uid": "fec7f06c-ae2d-11e9-8a41-005056a061f1",
                  },
                  "spec": Object {
                    "complianceType": "musthave",
                    "namespaces": Object {
                      "exclude": Array [
                        "kube-*",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                  },
                },
              ],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Generic Resources Resolver Correctly Resolves Update Resource Labels Mutation 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "attempts": 1,
          "status": 404,
          "statusCode": 404,
        },
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Nock: No match for request {
  \\"method\\": \\"PATCH\\",
  \\"url\\": \\"http://0.0.0.0/kubernetes/apis/internal.open-cluster-management.io/v1beta1/namespaces/cluster1/managedclusterinfos/cluster1\\",
  \\"headers\\": {
    \\"authorization\\": \\"localdev\\",
    \\"content-type\\": \\"application/json-patch+json\\",
    \\"host\\": \\"0.0.0.0\\",
    \\"accept\\": \\"application/json\\",
    \\"content-length\\": 138
  },
  \\"body\\": \\"[{\\\\\\"op\\\\\\":\\\\\\"replace\\\\\\",\\\\\\"value\\\\\\":[{\\\\\\"op\\\\\\":\\\\\\"replace\\\\\\",\\\\\\"path\\\\\\":\\\\\\"/metadata/labels\\\\\\",\\\\\\"value\\\\\\":{\\\\\\"cloud\\\\\\":\\\\\\"IBM\\\\\\",\\\\\\"datacenter\\\\\\":\\\\\\"toronto\\\\\\",\\\\\\"environment\\\\\\":\\\\\\"Dev\\\\\\"}}]}]\\"
}",
      "path": Array [
        "updateResourceLabels",
      ],
    },
  ],
}
`;

exports[`Generic Resources Resolver Correctly Resolves Update Resource Mutation 1`] = `
Object {
  "data": Object {
    "updateResource": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "ACM ERROR cannot find matched resource type",
      "path": Array [
        "updateResource",
      ],
    },
  ],
}
`;
